--- a/package.json
+++ b/package.json
@@ -29,25 +29,25 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "14.0.3",
+    "framer-motion": "^10.16.5",
+    "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.5",
-    "react-icons": "^4.12.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.2",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5.3.2"
   }
 }
